<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:orientation="horizontal"
    tools:context="com.example.user.mygrafik.IntegralActivity">


    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin">

        <EditText
            android:id="@+id/edfunc"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/func"
            android:textColor="@color/black"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/eda"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/gran"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black"
            android:textStyle="italic" />


        <EditText
            android:id="@+id/edb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:hint="@string/gran2"
            android:inputType="numberSigned|numberDecimal"
            android:textColor="@color/black"
            android:textStyle="italic" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/raschet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/decide"

                android:textColor="@color/black"
                android:textStyle="bold|italic" />


            <TextView
                android:id="@+id/otvet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/black"
                android:textStyle="bold|italic" />


        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="horizontal">

    </LinearLayout>


</LinearLayout>
