<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.user.mygrafik.Reference">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <TextView
        android:id="@+id/ask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:text="@string/text"
        android:textColor="@color/black"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/add"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tw3"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/ref3"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/otmena"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tw4"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/ref4"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:src="@drawable/tap"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <ImageView
            android:src="@drawable/flip"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/tw5"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/ref5"
            android:textColor="@color/black"
            android:textStyle="italic" />
    </LinearLayout>
</LinearLayout>



</ScrollView>
